wp-content/themes/rr/style.css
/* ... */
section[role="main"] .content {
	float:left;
	max-width:505px;
}

section[role="main"] .day {
	color:#dddfe3;
	font-size:58px;
	font-weight:700;
	line-height:65px;
	font-family:'Helvetica Neue',Helvetica,Arial,sans-serif;
	display:block;
}

section[role="main"] .month {
	color:#fff;
	font-size:12px;
	font-weight:700;
	text-transform:capitalize;
	font-family:Arial,sans-serif;
	background:#acb3ba;
	padding:2px 10px;
	-webkit-border-radius:3px;
	-moz-border-radius:3px;
	border-radius:3px;
}

section[role="main"] .year {
	color:#c2c2c2;
	font-size:12px;
	font-family:Arial,sans-serif;
	display:block;
	margin:5px 0 0;
}

section[role="main"] h2 {
	margin:0;
}

section[role="main"] h2 a {
	color:#991b1e;
	font-size:20px;
	font-family:robotoregular;
}

section[role="main"] .author {
	color:#667280;
	font-size:16px;
	font-family:robotolight;
}

section[role="main"] .author a {
	color:#991b1e;
	font-size:16px;
	font-family:robotolight;
}

section[role="main"] p {
	color:#667280;
	font-size:16px;
	font-family:robotolight;
	line-height:24px;
}

section[role="main"] .view-article {
	color:#990101;
	font-size:12px;
	font-family:robotolight;
	display:block;
	float:right;
	margin-top:30px;
}

.custom-fancybox-wrapper {
  padding: 40px 0 40px;
}

.custom-fancybox-wrapper h3 {
	color:#667280;
	font-size:44px;
	font-family:oswaldbold;
	text-align:center;
}

.custom-fancybox-wrapper ul {
  list-style-type: none;
  padding: 0;
}

.custom-fancybox-wrapper ul li {
  display: block;
  float: left;
  width: 199px;
  margin: 40px 19px 0 19px;
  line-height: 22px;
}

/* Removing as its causing layout issues with isotope
.custom-fancybox-wrapper ul li.last {
  margin: 0;
}*/

.custom-fancybox-wrapper ul li a:hover {
  text-decoration: none;
}

.custom-fancybox-wrapper ul li a {
  background-repeat: no-repeat;
  background-position: 0 0;
  width: 199px;
  height: 212px;
  display: block;
 /* margin: 40px 19px 0 19px;*/
}

section[role="leader"] .wrap {
  padding: 0px;
}

section[role="leader"].custom-fancybox-wrapper.executive-team ul li a:hover {
  background-position: -199px 0;
  width: 199px;
  height: 212px;
}

.custom-fancybox-wrapper h4 {
  font-family: robotoregular;
  font-size: 16px;
  margin: 0;
  color: #990101;
}

.custom-fancybox-wrapper .tagline {
  font-family: robotolight;
  font-size: 14px;
  color: #667280;
  line-height: 3px;
  
}

.custom-fancybox-popout-content p {
  margin-top: 0px;
}

/* Fancybox Styling */
/* BEGIN NEW FB STYLING*/

.fancybox-skin {
  -webkit-border-radius: 0px;
  -moz-border-radius: 0px;
  border-radius: 0px;
  
}

#fancybox-loading div {
/*  background: #fff;
  top: 0; 
  left: 0; 
  width: 100%; 
  height: 100%;*/
/*  background:#fff url("$path to animation/ajax-loader.gif") no-repeat 50% 50% !important;*/
}

.fancybox-nav {
 width: 55px;
}

.fancybox-nav span {
 visibility: visible;
}

.fancybox-prev {
  left: -55px;
}

.fancybox-next {
  right: -55px;
}

.fancybox-type-iframe .fancybox-prev {
  left: -70px;
}

.fancybox-type-iframe .fancybox-next {
  right: -70px;
}

/* END NEW FB STYLING*/

/*.fancybox-lock {
  overflow: hidden;
  margin: 0 !important;
}

#fancybox-close {
  right: -55px;
}
#fancybox-content {
  background: white;
}

#fancybox-left, #fancybox-right {
  width: 30px;
}

#fancybox-left {
  left: -55px;
}

#fancybox-right {
  right: -95px;
}

#fancybox-left, #fancybox-right {
  visibility: visible !important;
  display: block;
}

#fancybox-left-ico span, #fancybox-right-ico span{
  left: auto;
  right: 0px;
}

#fancybox-left-ico {
  left: 20px;
}
#fancybox-right-ico {
  right: 20px;
  left: auto;
}*/

/*#fancybox-close {
  right: -55px !important;
}*/

/*****FANCYBOX STYLING*****/

/*#fancybox-overlay {
  background-color: #000000 !important;
  opacity: 0.8 !important;
}

#fancybox-close {
  position: absolute;
  right: -55px !important;
  top: -15px  !important;
}

#fancybox-right {
  position: absolute !important;
  right: -80px !important;
}

#fancybox-left {
  position: absolute !importnat;
  left: -60px !important;
}
 
#fancybox-content {
  width: 640px !important;
  height: 360px !important;
}*/

.leadership .custom-fancybox-popout {
  max-width: 680px;
}

.insights .custom-fancybox-popout {
  max-width: 770px;
}

.custom-fancybox-popout-left{
  width: 200px;
  float: left;
  margin: 25px 5px 15px 25px;
  color: #667280;
}
.custom-fancybox-popout-left img.custom-fancybox-thumbnail {
  float: left;
}

.custom-fancybox-popout-left span.custom-fancybox-thumbnail {
  background-position: 0 0;
  width: 199px;
  height: 212px;
  display: block;
}

.leadership .custom-fancybox-popout-right {
  max-width: 410px;
  float: left;
  padding: 20px;
}

.insights .custom-fancybox-popout-right {
  max-width: 500px;
  float: left;
  padding: 25px;
}

.custom-fancybox-popout-content {
  overflow-y: scroll;
  overflow-x: hidden;
  height: 345px;
  margin-top: 20px;
}

.insights .custom-fancybox-popout-content {
  height: 180px;
  padding-right: 12px;
}

.marketo-insight {
  height: 475px;
}

.custom-fancybox-popout-right h4 {
  font-family: robotolight;
  font-size: 28px;
  margin: 0.1em 0 0.5em 0;
}

.custom-fancybox-popout-right .tagline {
  font-family: robotobold;
  font-size: 14px;
}

.custom-fancybox-popout-right p {
  font-family: robotolight;
  font-size: 14px;
}


/*------------------------------------*\
	TECHNOLOGY ITEMS
\*------------------------------------*/

.section_items {
	list-style: none;
	float: left;
	padding: 0px;
	margin: 0px;
	width: 100%;
}

ul.section_items li {
	width: 100% !important;
	list-style: none !important;
	margin-bottom: 20px !important;
}

.section_items li img {
	vertical-align: top;
	padding-right: 25px;
	margin-bottom: 15px;
}

.section_items li div {
	width: 85%;
	display: inline-block;
}

.section_items li div > h4 {
	text-transform: uppercase;
	margin: 0;
}

.section_items li div > p {
	font-size: 19px;
	line-height: 30px;
}

.section_items.capabilities ul {
	margin: 10px 0;
	padding: 0;
}
/* ... */

